<resources>
    <string name="app_name">ET\'s Turbo Pigbash</string>
    <string name="background">background</string>
    <string name="counter">counter</string>
    <string name="time_left">time left</string>
    <string name="left_digit">left digit</string>
    <string name="right_digit">right digit</string>
    <string name="et_s">ET\'s</string>
    <string name="turbo">TURBO</string>
    <string name="pig_bash">pig bash</string>
    <string name="pig">pig</string>
    <string name="start">start</string>
    <string name="options">options</string>
    <string name="scores">scores</string>
    <string name="exit">exit</string>
    <string name="top_shooter">top shooter</string>
    <string name="test_music">test music</string>
    <string name="test_sfx">test sound effects</string>
    <string name="music">music</string>
    <string name="title">ET\'s Turbo Pigbash</string>
    <string name="top_shooters">top shooters</string>
    <string name="reset">reset</string>
    <string name="go_back">go back</string>
    <string name="more_carnage">more carnage!</string>
    <string name="defaults">defaults</string>
</resources>
