<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:id="@+id/mainAppendor"
    android:background="#000000"
    tools:ignore="Overdraw">


    <ImageView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/options_options"
        android:contentDescription="@string/options" />

    <e.notroot.pigbash.SpriteView
        android:id="@+id/pigsprite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"

        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pigsprite"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true">

                            <ImageView
                                android:id="@+id/samplemusic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/options_test"
                                android:contentDescription="@string/test_music" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="150dp">


                                <e.notroot.pigbash.TouchbarView
                                    android:id="@+id/music"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentBottom="true"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentRight="true" />

                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:orientation="vertical"
                            android:layout_alignParentRight="true">

                            <ImageView
                                android:id="@+id/samplesfx"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/options_test"
                                android:contentDescription="@string/test_sfx" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="150dp">

                                <e.notroot.pigbash.TouchbarView
                                    android:id="@+id/sfx"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentBottom="true"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentRight="true" />

                            </RelativeLayout>
                        </LinearLayout>
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/defaults"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/options_default"
                        android:contentDescription="@string/defaults" />
                </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/options_musicsound"
                android:contentDescription="@string/music" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/options_turbo"
            android:contentDescription="@string/title" />
    </LinearLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/options_return"
        android:contentDescription="@string/go_back"
        tools:ignore="RtlCompat" />


</RelativeLayout>