<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:id="@+id/mainAppendor"
    android:background="#000000"
    tools:ignore="Overdraw"> <!-- suppressed here and elsewhere because we don't actually draw the background more than once -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent"> <!-- We need mainAppendor to be relative so that the animations can bounce around-->

        <RelativeLayout
            android:id="@+id/topwrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/etwrapper">
                <ImageView
                    android:id="@+id/et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/menu_et"
                    android:contentDescription="@string/et_s" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/turbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etwrapper"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/menu_turbo"
                android:visibility="invisible"
                android:contentDescription="@string/turbo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/turbo"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/pigbash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/menu_pigbash"
                    android:contentDescription="@string/pig_bash" />
            </RelativeLayout>
        </RelativeLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <RelativeLayout
            android:id="@+id/midwrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/startwrapper"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/menu_pig_ref_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rotate_pig_3"
                    android:contentDescription="@string/pig" />
                <ImageView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="7dp"
                    app:srcCompat="@drawable/menu_button_start"
                    android:visibility="invisible"
                    android:contentDescription="@string/start" />
                <ImageView
                    android:id="@+id/menu_pig_ref_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rotate_pig_3"
                    android:contentDescription="@string/pig"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/startwrapper"
                android:layout_centerHorizontal="true"
                android:id="@+id/optionswrapper">
                <ImageView
                    android:id="@+id/menu_pig_ref_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rotate_pig_3"
                    android:contentDescription="@string/pig"/>
                <ImageView
                    android:id="@+id/options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="7dp"
                    app:srcCompat="@drawable/menu_button_options"
                    android:visibility="invisible"
                    android:contentDescription="@string/options" />
                <ImageView
                    android:id="@+id/menu_pig_ref_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rotate_pig_3"
                    android:contentDescription="@string/pig"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/optionswrapper"
                android:layout_centerHorizontal="true"
                android:id="@+id/scoreswrapper">
                <ImageView
                    android:id="@+id/menu_pig_ref_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rotate_pig_3"
                    android:contentDescription="@string/pig"/>
                <ImageView
                    android:id="@+id/scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="7dp"
                    app:srcCompat="@drawable/menu_button_scores"
                    android:visibility="invisible"
                    android:contentDescription="@string/scores" />
                <ImageView
                    android:id="@+id/menu_pig_ref_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rotate_pig_3"
                    android:contentDescription="@string/pig"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scoreswrapper"
                android:layout_centerHorizontal="true"
                android:paddingTop="6dp"
                app:srcCompat="@drawable/menu_button_exit"
                android:visibility="invisible"
                android:contentDescription="@string/exit" />
        </RelativeLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            android:id="@+id/bottomwrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/topshooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/menu_topshooter"
                android:visibility="invisible"
                android:contentDescription="@string/top_shooter" />

            <RelativeLayout
                android:id="@+id/scorewrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_alignParentStart="true"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:layout_toStartOf="@+id/score"
                    android:layout_toLeftOf="@+id/score"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>